edits to lecture 7

--- a/Lectures/Lecture_07_PDM.ipynb
+++ b/Lectures/Lecture_07_PDM.ipynb
@@ -2178,7 +2178,7 @@
     "from scipy.integrate import quad\n",
     "from scipy.stats import gaussian_kde\n",
     "\n",
-    "def pi_f(f):\n",
+    "def pi_f(f): # probability density function of f\n",
     "    f = np.asarray(f)\n",
     "    out = np.zeros_like(f, dtype=float)\n",
     "    lo, hi = 1/np.sqrt(2), 1.0\n",
@@ -2187,16 +2187,16 @@
     "    return out\n",
     "\n",
     "# Check normalization\n",
-    "lo, hi = 1/np.sqrt(2), 1.0\n",
-    "norm, err = quad(lambda x: pi_f(x), lo, hi)\n",
-    "print(\"Integral of pi(f) over [1/sqrt(2), 1] =\", norm, \"+/-\", err)\n",
+    "lo, hi = 1/np.sqrt(2), 1.0 # limits of f\n",
+    "norm, err = quad(lambda x: pi_f(x), lo, hi) # integrate pi(f) over [1/sqrt(2), 1]\n",
+    "print(\"Integral of pi(f) over [1/sqrt(2), 1] =\", norm, \"+/-\", err) # should be 1\n",
     "\n",
     "# Compare to sampled f\n",
-    "rng = np.random.default_rng(0)\n",
-    "chi = rng.uniform(0, 1, 200_000)\n",
-    "f_samp = np.sqrt((1 + np.sqrt(1 - chi**2))/2)\n",
+    "rng = np.random.default_rng(0) # reproducible\n",
+    "chi = rng.uniform(0, 1, 200_000) # uniform in [0,1]\n",
+    "f_samp = np.sqrt((1 + np.sqrt(1 - chi**2))/2) # compute f from chi\n",
     "\n",
-    "f_grid = np.linspace(lo, hi, 1000)\n",
+    "f_grid = np.linspace(lo, hi, 1000) # grid for plotting\n",
     "\n",
     "plt.figure(figsize=(7,4))\n",
     "plt.hist(f_samp, bins=120, density=True, alpha=0.35, label=\"MC histogram\")\n",
@@ -2280,15 +2280,15 @@
     "from scipy.stats import gaussian_kde\n",
     "\n",
     "# analytic pdf of Mirr using the hint formula\n",
-    "def p_Mirr(z, mu, sigma):\n",
+    "def p_Mirr(z, mu, sigma): # pdf of Mirr at z, given M ~ N(mu, sigma)\n",
     "    lo, hi = 1/np.sqrt(2), 1.0\n",
     "\n",
     "    # integrand for fixed z\n",
-    "    def integrand(f):\n",
+    "    def integrand(f): # integrand over f\n",
     "        return np.exp(-0.5*((z/f - mu)/sigma)**2) * (2*f**2 - 1) / (f*np.sqrt(1 - f**2))\n",
     "\n",
-    "    val, err = quad(integrand, lo, hi, limit=200)\n",
-    "    return np.sqrt(2/np.pi) * (1.0/sigma) * val\n",
+    "    val, err = quad(integrand, lo, hi, limit=200) # integrate over f\n",
+    "    return np.sqrt(2/np.pi) * (1.0/sigma) * val \n",
     "\n",
     "# Vectorize for arrays (calls quad many times; OK for moderate grid sizes)\n",
     "p_Mirr_vec = np.vectorize(p_Mirr, excluded=[\"mu\", \"sigma\"])\n",
@@ -2298,20 +2298,20 @@
     "sigma = 0.02\n",
     "N = 200_000\n",
     "\n",
-    "rng = np.random.default_rng(123)\n",
+    "rng = np.random.default_rng(123) # reproducible\n",
     "M = rng.normal(mu, sigma, size=N)  # untruncated normal to match analytic assumption\n",
     "chi = rng.uniform(0, 1, size=N)\n",
-    "f = np.sqrt((1 + np.sqrt(1 - chi**2))/2)\n",
-    "Mirr = M * f\n",
+    "f = np.sqrt((1 + np.sqrt(1 - chi**2))/2) # compute f from chi\n",
+    "Mirr = M * f # compute Mirr\n",
     "\n",
     "# KDE from samples\n",
-    "kde = gaussian_kde(Mirr)\n",
+    "kde = gaussian_kde(Mirr) # default bandwidth (Scott's rule)\n",
     "\n",
     "# Grid for plotting\n",
     "z_grid = np.linspace(np.percentile(Mirr, 0.5), np.percentile(Mirr, 99.5), 250)\n",
     "\n",
-    "pdf_kde = kde(z_grid)\n",
-    "pdf_ana = p_Mirr_vec(z_grid, mu=mu, sigma=sigma)\n",
+    "pdf_kde = kde(z_grid) #KDE estimate from samples\n",
+    "pdf_ana = p_Mirr_vec(z_grid, mu=mu, sigma=sigma) # analytic integral estimate\n",
     "\n",
     "plt.figure(figsize=(8,4.5))\n",
     "plt.hist(Mirr, bins=140, density=True, alpha=0.25, label=\"MC histogram\")\n",
