small edits to lecture 9

--- a/Lectures/Lecture_09_PDM.ipynb
+++ b/Lectures/Lecture_09_PDM.ipynb
@@ -1356,35 +1356,6 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "This figure illustrates the behavior of $O_{21}$ as a function of $k$ (number of successes) for two different values of $N$ and for two different values of $b_\\ast$: $b_\\ast = 0.5$  (**M1**: the coin is fair) and $b_\\ast = 0.1$ (**M1**: the coin is biased to tails). \n",
-    "\n",
-    "*The ability to distinguish  the two hypothesis **improves** with the sample size.*\n",
-    "\n",
-    "For example:\n",
-    "- when $b_\\ast = 0.5$ and $k/N = 0.1$ ($k=1$ on the left and $k=2$ on the right), the odds ratio in favor of **M2** increases from $\\sim 9$ for $N=10$ to $\\sim 263$ for $N=20$. \n",
-    "- when k = $b_\\ast N$, the odds ratio is $0.37$ for $N=10$ and 0.27 for $N=20$. \n",
-    "- **the simpler model is favored by the data**, and the support strengthens with the sample size. \n",
-    "\n",
-    "**NOTE** \n",
-    "- *$O_{21}= \\sqrt{\\pi/(2N)}$ when k = $b_\\ast N$ and $b_\\ast = 0.5$.* \n",
-    "- To build strong evidence that a coin is fair, $O_{21} < 0.1$, it takes as many as $N > 157$ tosses. \n",
-    "- With N = 10,000, the heads probability of a fair coin is measured with a precision of 1% and the corresponding odds ratio is $O_{21} \\approx 1/80$.\n",
-    "\n",
-    "***Frequentist Versus Bayesian***\n",
-    "\n",
-    "In the **frequentist approach**, we ask whether we can reject the \"null hypothesis\" that our coin is fair. Specifically, we ask whether a given $k$ is a very unusual outcome (at some significance level $\\alpha$, say $\\alpha=0.05$) for a fair coin with $b_\\ast = 0.5$ and with a given N. \n",
-    "\n",
-    "In the **Bayesian approach**, we offer an alternative hypothesis that the coin has an unknown heads probability. While this probability can be estimated from provided data ($b_0$), **we consider all the possible values** of $b_0$ when comparing the two proposed hypotheses. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "\n",
@@ -1519,7 +1490,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Approximate Bayesian Model Comparison <a class=\"anchor\" id=\"three\"></a>\n",
+    ">## Approximate Bayesian Model Comparison <a class=\"anchor\" id=\"three\"></a>\n",
     "\n",
     "While the full *Odds Ratio* is the ultimate goal, it can be costly to compute. So we have some *approximate methods* that balance between ***goodness of fit*** and ***model complexity***. \n",
     "\n",
