Lecture 10 final and edits to lecture 8

--- a/Lectures/Lecture_08_PDM.ipynb
+++ b/Lectures/Lecture_08_PDM.ipynb
@@ -391,9 +391,9 @@
     "\n",
     "If the likelihood is Gaussian and the prior function is Gaussian, then so too is the posterior distribution! So the conjugate prior for a Gaussian likelihood is a Gaussian.\n",
     "\n",
-    "For data drawn from a Gaussian likelihood equal to $\\mathcal{N}(\\bar{x},s)$ (where $\\bar{x}$ is the sample mean and $s$ is the sample standard deviation), with a prior on the underlying parameters $\\mathcal{N}(\\mu_p,\\sigma_p)$, the posterior is $\\mathcal{N}(\\mu^0,\\sigma^0)$, where\n",
+    "For data drawn from a Gaussian likelihood equal to $\\mathcal{N}(\\bar{x},s)$ (where $\\bar{x}$ is the sample mean and $s$ is the sample standard deviation), with a prior on the underlying parameters $\\mathcal{N}(\\mu_0,\\sigma_0)$, the posterior is $\\mathcal{N}(\\mu_{\\rm post},\\sigma_{\\rm post})$, where\n",
     "\n",
-    "$$\\mu^0 = \\frac{\\mu_p/\\sigma_p^2 + \\bar{x}/s^2}{1/\\sigma_p^2 + 1/s^2},\\quad \\sigma^0 = \\left( 1/\\sigma_p^2 + 1/s^2 \\right)^{-1/2}. $$\n",
+    "$$\\mu_{\\rm post} = \\frac{\\mu_0/\\sigma_0^2 + \\bar{x}/s^2}{1/\\sigma_0^2 + 1/s^2},\\quad \\sigma_{\\rm post} = \\left( 1/\\sigma_0^2 + 1/s^2 \\right)^{-1/2}. $$\n",
     "\n",
     "\n",
     "### Hierarchical Bayes\n",
