Edited Lecture 05 notebook

--- a/Lectures/Lecture_05_PDM.ipynb
+++ b/Lectures/Lecture_05_PDM.ipynb
@@ -554,23 +554,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Aside on the normalization and functional dependence of $L(\\bm{\\theta})$:\n",
+    "Aside on the normalization and functional dependence of $L(\\mathbf{\\theta})$:\n",
     "\n",
-    "$$L(\\bm{\\theta}) \\equiv p(\\mathbf{x}|\\bm{\\theta}) = p(\\textrm{seeing the observed data \\textit{given} our model parameters})$$\n",
+    "$$L(\\mathbf{\\theta}) \\equiv p(\\mathbf{x}|\\mathbf{\\theta}) = p(\\textrm{seeing the observed data \\textit{given} our model parameters})$$\n",
     "where \n",
     "- Data Vector: $\\mathbf{x} = \\{x_1, ..., x_n\\}$\n",
-    "- Parameter Vector: $\\bm{\\theta} = \\{\\theta_1, ..., \\theta_m\\}$\n",
+    "- Parameter Vector: $\\mathbf{\\theta} = \\{\\theta_1, ..., \\theta_m\\}$\n",
     "\n",
     "It is a probability distribution over the data: \n",
     "\n",
-    "$$ \\int p(\\mathbf{x}|\\bm{\\theta})\\; {\\rm d}^n \\mathbf{x} = 1$$\n",
+    "$$ \\int p(\\mathbf{x}|\\mathbf{\\theta})\\; {\\rm d}^n \\mathbf{x} = 1$$\n",
     "\n",
     "but not over the parameters:\n",
     "\n",
-    "$$ \\int p(\\mathbf{x}|\\bm{\\theta})\\; {\\rm d}^m \\bm{\\theta} \\neq 1$$\n",
+    "$$ \\int p(\\mathbf{x}|\\mathbf{\\theta})\\; {\\rm d}^m \\mathbf{\\theta} \\neq 1$$\n",
     "\n",
-    "Thus, even though $L(\\bm{\\theta})$ is a probability distribution (over the data), that doesn't matter for us because\n",
-    " - We are studying how the likelihood is affected by changing parameters, making it a function of the parameters $\\bm{\\theta}$\n",
+    "Thus, even though $L(\\mathbf{\\theta})$ is a probability distribution (over the data), that doesn't matter for us because\n",
+    " - We are studying how the likelihood is affected by changing parameters, making it a function of the parameters $\\mathbf{\\theta}$\n",
     " - We only have one observation of the data, so we can not explore the sample space of the data"
    ]
   },
@@ -890,7 +890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -931,7 +931,7 @@
     "    randomVariates = poisson.rvs(mu, size=1000)\n",
     "    # histogram of random draws\n",
     "    plt.hist(randomVariates, density=True, color=c, alpha=0.2, \n",
-    "             bins=np.arange(0,26), label='$\\mu=' + str(mu) + '$')\n",
+    "             bins=np.arange(0,26), label=r'$\\mu=' + str(mu) + '$')\n",
     "\n",
     "plt.legend()\n",
     "plt.title(\"Poisson Distribution\")\n",
