small edits lecture 2 & 3

--- a/Lectures/Lecture_02_PDM.ipynb
+++ b/Lectures/Lecture_02_PDM.ipynb
@@ -919,7 +919,7 @@
     " - Repeat it many times.\n",
     " - Which player do you want to be?\n",
     " \n",
-    " - What would happen if you had 100 doors to choose from and the presenter opens 98 or them?"
+    " - What would happen if you had 100 doors to choose from and the presenter opens 98 of them?"
    ]
   }
  ],
